--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,16 @@
   "description": "lireddit: server",
   "main": "index.js",
   "scripts": {
+    "watch": "tsc -w",
+    "dev": "nodemon dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Scoder12",
-  "license": "AGPL-3.0-or-later"
+  "license": "AGPL-3.0-or-later",
+  "devDependencies": {
+    "@types/node": "^14.14.22",
+    "nodemon": "^2.0.7",
+    "typescript": "^4.1.3"
+  }
 }
