--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/connect-redis": "^0.0.16",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/getenv": "^1.0.0",
     "@types/node": "^14.14.22",
     "@types/redis": "^2.8.28",
     "nodemon": "^2.0.7",
@@ -33,6 +34,7 @@
     "connect-redis": "^5.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "getenv": "^1.0.0",
     "graphql": "^15.5.0",
     "pg": "^8.5.1",
     "redis": "^3.0.2",
