--- a/web/package.json
+++ b/web/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.0.0",
     "formik": "^2.2.6",
     "framer-motion": "^3.0.0",
+    "graphql": "^15.5.0",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "urql": "^1.11.6"
   },
   "license": "MIT",
   "devDependencies": {
