--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/system": "^1.1.7",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "cors": "^2.8.5",
     "formik": "^2.2.6",
     "framer-motion": "^3.0.0",
     "graphql": "^15.5.0",
@@ -22,6 +23,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.9",
     "@types/node": "^14.14.22",
     "typescript": "^4.1.3"
   }
