--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "AGPL-3.0-or-later",
   "devDependencies": {
     "@types/connect-redis": "^0.0.16",
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/getenv": "^1.0.0",
@@ -32,6 +33,7 @@
     "argon2": "^0.27.1",
     "class-validator": "^0.13.1",
     "connect-redis": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "getenv": "^1.0.0",
