--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -14,6 +14,10 @@
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
+    "noUnusedParameters": true,
+    "removeComments": true,
+    "noFallthroughCasesInSwitch": true,
+    "strictFunctionTypes": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
