--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/system": "^1.1.7",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@urql/exchange-graphcache": "^3.4.0",
     "formik": "^2.2.6",
     "framer-motion": "^3.0.0",
     "graphql": "^15.5.0",
