--- a/web/package.json
+++ b/web/package.json
@@ -18,9 +18,11 @@
     "framer-motion": "^3.0.0",
     "graphql": "^15.5.0",
     "next": "latest",
+    "next-urql": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "urql": "^1.11.6"
+    "react-is": "^17.0.1",
+    "urql": "^2.0.1"
   },
   "license": "MIT",
   "devDependencies": {
