--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/express-session": "^1.17.3",
     "@types/getenv": "^1.0.0",
     "@types/node": "^14.14.22",
+    "@types/nodemailer": "^6.4.0",
     "@types/redis": "^2.8.28",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
@@ -37,6 +38,8 @@
     "express-session": "^1.17.1",
     "getenv": "^1.0.0",
     "graphql": "^15.5.0",
+    "nodemailer": "^6.4.18",
+    "normalize-email": "^1.1.1",
     "pg": "^8.5.1",
     "redis": "^3.0.2",
     "type-graphql": "^1.1.1"
