--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@types/ioredis": "^4.19.4",
     "@types/node": "^14.14.22",
     "@types/nodemailer": "^6.4.0",
+    "@types/pug": "^2.0.4",
     "@types/redis": "^2.8.28",
     "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
@@ -42,6 +43,7 @@
     "nodemailer": "^6.4.18",
     "normalize-email": "^1.1.1",
     "pg": "^8.5.1",
+    "pug": "^3.0.0",
     "type-graphql": "^1.1.1",
     "uuid": "^8.3.2"
   },
