--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "argon2": "^0.27.1",
     "class-validator": "^0.13.1",
     "connect-redis": "^5.0.0",
+    "declassify": "^2.1.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
