--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/html-to-text": "^6.0.0",
     "@types/ioredis": "^4.19.4",
     "@types/node": "^14.14.22",
     "@types/nodemailer": "^6.4.0",
@@ -40,6 +41,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
+    "html-to-text": "^7.0.0",
     "ioredis": "^4.22.0",
     "juice": "^7.0.0",
     "nodemailer": "^6.4.18",
